2009-09-15	Till Straumann <strauman@slac.stanford.edu>

	PR 1344/bsps:
	* clock/ckinit.c: Fix more bugs (applied PR1344/attachment 702):
	TSC handler was used when 8254 was requested and vice versa.
	Also, nanosecond handler was never installed to RTEMS clock.

2008-12-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Backport from CVS-HEAD.

2008-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1344/bsps
	* clock/ckinit.c: Committed code was not final. Corrections.

2008-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>
		Michael South <msouth@msouth.org>

	PR 1344/bsps
	* configure.ac, clock/ckinit.c, timer/timer.c: Add use of TSC for
	nanoseconds granularity. i8254 is very slow on some systems. TSC use
	is auto-detected by default.

2008-09-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* ide/ide.c: Convert to "bool".

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.c: Remove bogus decl.
	* timer/timer.c: Convert to "bool".

2008-09-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* clock/rtc.c, console/inch.c, ne2000/ne2000.c, timer/timer.c:
	Eliminate rtems_boolean.

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Eliminate empty function from every benchmark timer
	driver. Fix spelling.

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Rename timer driver methods to follow RTEMS
	programming conventions.

2008-08-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am: Now named bspclean.c

2008-08-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/bspclean.c: New file.
	* startup/exit.c: Removed.

2008-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* console/ps2_mouse.c: Fix ps2 mouse interrupt.

2008-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clock/ckinit.c, console/serial_mouse.c, ne2000/ne2000.c,
	startup/bspstart.c: Fix warnings for prototypes, types, etc.

2008-08-18	Ralf Corsépius <ralf.corsepius@rtems.org>
