@@ -1,3 +1,9 @@
+2010-03-10	Gedare Bloom <gedare@gwu.edu>
+
+	PR 1495/bsp
+	* clock/ckinit.c: Calling rtems_clock_get_uptime() in a tight loop
+	sometimes showed time moving backwards.
+
 2009-09-15	Till Straumann <strauman@slac.stanford.edu>
 
 	PR 1344/bsps:
